hybrid-telemetry-observability-pipeline/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: telemetry-system
  labels:
    app.kubernetes.io/part-of: hybrid-telemetry-pipeline
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
